testsuite/tests/builtins/stream_methods/any/non_function_predicate/test.out
Error: Invalid argument type
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(s.any("Not a function"))
   │       ───────────┬───────────  
   │                  ╰───────────── Expecting a "Function" for the parameter "predicate", got a "Str"
───╯
